--- a/frontend/index.html
+++ b/frontend/index.html
@@ -99,5 +99,6 @@
 <body>
     <div class="mesh-bg"></div>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
